--- a/JS Advanced/11. Workshop Wizard Side Scrolling Game/solitaire/index.html
+++ b/JS Advanced/11. Workshop Wizard Side Scrolling Game/solitaire/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solitaire</title>
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="/site.css">
     <script src="/src/app.js" type="module"></script>
 </head>
 <body>
@@ -18,15 +18,13 @@
         <div id="stock">
             <article class="deck">
                 <div class="card back top">
-                
+                    <span class="back"></span>
                 </div>
-
             </article>
             <article class="deck">
                 <div class="card black top">
                     &spades;7
                 </div>
-                
             </article>
         </div>
 
