--- a/Front-End/HTML&CSS/04. CSS Box Model/05. Photo Gallery Inline Block/index.html
+++ b/Front-End/HTML&CSS/04. CSS Box Model/05. Photo Gallery Inline Block/index.html
@@ -17,6 +17,9 @@
         <li><img src="picture1.jpg"></li>
         <li><img src="picture2.jpg"></li>
         <li><img src="picture3.jpg"></li>
+        <li><img src="picture6.jpg"></li>
+        <li><img src="picture1.jpg"></li>
+        <li><img src="picture2.jpg"></li>
     </ul>
     
 </body>
