--- a/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/03.Finbest/index.html
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/03.Finbest/index.html
@@ -64,7 +64,7 @@
                 <div class="plan">
                     <h4>Standard</h4>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
-                    <p class="cost">Free</p>
+                    <p class="cost"><span>Free</span></p>
                     <ul>
                         <li>Sed ut perspiciatis unde</li>
                         <li>Quis nostrud exercitation ulla</li>
@@ -77,7 +77,7 @@
                 <div class="plan">
                     <h4>Plus</h4>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
-                    <p class="cost">$8 /month</p>
+                    <p class="cost"><span>$8</span> /month</p>
                     <ul>
                         <li>Sed ut perspiciatis unde</li>
                         <li>Quis nostrud exercitation ulla</li>
@@ -90,8 +90,7 @@
                 <div class="plan">
                     <h4>Premium</h4>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit.</p>
-                    <p class="cost">$16
-                        /month</p>
+                    <p class="cost"><span>$16</span>/month</p>
                     <ul>
                         <li>Sed ut perspiciatis unde</li>
                         <li>Quis nostrud exercitation ulla</li>
