--- a/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/index.html
@@ -28,7 +28,7 @@
             <label>REPEAT PASSWORD </label>
             <input type="password" placeholder="********">
             <div class="buttons">
-                <div class="reg"><a href="#">Register<</a>/div>
+                <div class="reg"><a href="#">Register</a></div>
                 <div class="ninja"><a href="#">I am already a ninja</a></div>
             </div>
         </div>
