--- a/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/03. Travel_Resources/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/03. Travel_Resources/index.html
@@ -12,6 +12,7 @@
         <div class="img">
             <img src="./image/logo.png">
         </div>
+
         <section>
             <div class="list">
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 500 500"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#797979}</style><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>Search</a>
@@ -19,7 +20,7 @@
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 500 500"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#989898}</style><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg>Shopping List</a>
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 500 500"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#989898}</style><path d="M57.7 193l9.4 16.4c8.3 14.5 21.9 25.2 38 29.8L163 255.7c17.2 4.9 29 20.6 29 38.5v39.9c0 11 6.2 21 16 25.9s16 14.9 16 25.9v39c0 15.6 14.9 26.9 29.9 22.6c16.1-4.6 28.6-17.5 32.7-33.8l2.8-11.2c4.2-16.9 15.2-31.4 30.3-40l8.1-4.6c15-8.5 24.2-24.5 24.2-41.7v-8.3c0-12.7-5.1-24.9-14.1-33.9l-3.9-3.9c-9-9-21.2-14.1-33.9-14.1H257c-11.1 0-22.1-2.9-31.8-8.4l-34.5-19.7c-4.3-2.5-7.6-6.5-9.2-11.2c-3.2-9.6 1.1-20 10.2-24.5l5.9-3c6.6-3.3 14.3-3.9 21.3-1.5l23.2 7.7c8.2 2.7 17.2-.4 21.9-7.5c4.7-7 4.2-16.3-1.2-22.8l-13.6-16.3c-10-12-9.9-29.5 .3-41.3l15.7-18.3c8.8-10.3 10.2-25 3.5-36.7l-2.4-4.2c-3.5-.2-6.9-.3-10.4-.3C163.1 48 84.4 108.9 57.7 193zM464 256c0-36.8-9.6-71.4-26.4-101.5L412 164.8c-15.7 6.3-23.8 23.8-18.5 39.8l16.9 50.7c3.5 10.4 12 18.3 22.6 20.9l29.1 7.3c1.2-9 1.8-18.2 1.8-27.5zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>Language</a>
             </div>
-        </section>
+        
         <nav>
             <ul class="navigation">
                 <li><a href="#">BUDAPEST</a></li>
@@ -30,16 +31,20 @@
                 <li><a href="#">EVENTS</a></li>
             </ul>
         </nav>
+        </section>
     </header>
     <main>
-        <div class="back">
+        <!-- <div class="back">
             <img src="./image/slider.jpg">
-        </div>
-        <div class="text">
-            <h2>SHUTTLE</h2>
-            <p>Travel by Funicular – Chairlift Shuttle between Buda Castle and Zugliget! The Shuttle runs and waits for the passengers every day on the long weekend between 20-23 October, 2018.</p>
-            <div class="read"><a href="#">READ MORE</a></div>
-        </div>
+        </div> -->
+            <div class="start">
+                <div class="text">
+                    <h2>SHUTTLE</h2>
+                    <p>Travel by Funicular – Chairlift Shuttle between Buda Castle and Zugliget! The Shuttle runs and waits for the passengers every day on the long weekend between 20-23 October, 2018.</p>
+                    <div class="read"><a href="#">READ MORE</a></div>
+                    </div>
+            </div>
+           
         <div class="card">
             <h2>BUDAPEST CARD</h2>
             <ul class="cardList">
@@ -49,7 +54,7 @@
                 <li>Travel around the city for free</li>
                 <li>Create your own unique experiences</li>
             </ul>
-            <div class="buy"><a href="#">BUY NOW</a></div>
+            <button class="buy"><a href="#">BUY NOW</a></button>
         </div>
 
         <div class="pics">
@@ -63,10 +68,6 @@
                 <div class="image">
                     <img src="./image/tours.jpg">
                     <p>FREE PUBLIC TRANSPORT</p>
-                </div>
-                <div class="image">
-                    <img src="./image/transport.jpg">
-                    <p>FREE BUDA & PEST WALKING TOURS</p>
                 </div>
                 <div class="image">
                     <img src="./image/museums.jpg">
@@ -87,12 +88,10 @@
     <footer>
         <div class="finish">
             <div>
-                <h3>NEWSLETTER</h3>
-            <p>Subscribe for the Budapest Newsletter!</p>
+                <h6>NEWSLETTER</h6>
+                <p>Subscribe for the Budapest Newsletter!</p>
             </div>
-            <div><a href="#">SUBSCRIBE</a></div>
-
-
+            <div class="button"><a href="#">SUBSCRIBE</a></div>
         </div>
         <div class="reserve">
             <p>Copyright © 2018 - All rights reserved.</p>
