--- a/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/index.html
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <p>InTime</p>
+            <p>In<span>Time</span></p>
             <nav>
                 <ul>
                     <li>HOME</li>
@@ -24,38 +24,40 @@
 
         <main>
             <div class="top">
-                <p>READY TO PROMOTE</p>
-                <p>YOUR NEW BUSINESS</p>
-                <p class="button start"><a href="#">GET STARTED</a></p>
+                <div>
+                    <p>READY TO PROMOTE</p>
+                    <p>YOUR NEW BUSINESS</p>
+                    <p class="button start"><a href="#">GET STARTED</a></p>
+                </div>
             </div>
 
             <div class="text">
-                <h2>WELCOME TO OUR COMPANY</h2>
+                <h2>WELCOME <span>TO OUR</span> COMPANY</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p class="button read"><a href="#">Read More</a></p>
             </div>
 
             <div class="services">
-                <h2>OUR SERVICES</h2>
+                <h2>OU<span>R SERVI</span>CES</h2>
                 <div class="ourServices">
-                <div>
+                    <div>
                     <img src="./images/service1.jpg">
                     <h3>Service Name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <p class="button read serv"><a href="#">Read More</a></p>
-                </div>
-                <div>
+                    </div>
+                    <div>
                     <img src="./images/service2.jpg">
                     <h3>Service Name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <p class="button read serv"><a href="#">Read More</a></p>
-                </div>
-                <div>
+                    </div>
+                    <div>
                     <img src="./images/service3.jpg">
                     <h3>Service Name</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <p class="button read serv"><a href="#">Read More</a></p>
-                </div>
+                    </div>
                 </div>
             </div>
 
@@ -108,8 +110,6 @@
                     </div>
                 </div>
             </div>
-
-
         </main>
 
         <footer>
