--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2022/03. Fitness Site_Ресурси/Screenshots/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2022/03. Fitness Site_Ресурси/Screenshots/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="left">
-                <svg></svg>
+                <!-- <svg></svg> -->
                 <p>1-800-235-658</p>
             </div>
             <div class="top">
-                <svg></svg>
-                <p>1-800-235-658</p>
+                <!-- <svg></svg> -->
+                <p>Bulgaria, Mladost 1, bl.105</p>
             </div>
             <div class="right">
+                <!-- <svg></svg>
                 <svg></svg>
                 <svg></svg>
-                <svg></svg>
-                <svg></svg>
+                <svg></svg> -->
             </div>
         </header>
         <main>
@@ -49,7 +49,7 @@
                         <p>Our coaches have years of experience in various types of fitness and sports.</p>
                     </div>
                     <div>
-                        <img src="../image/fitness-main.jpg">
+                        <img src="../image/thumbs-up-hand-symbol.png">
                         <h3>Individual Approach</h3>
                         <p>Every client of GYM has a personalized program of training and nutrition.</p>
                     </div>
@@ -61,8 +61,8 @@
                 </div>
             </div>
             <div class="coach">
-                <h2>Welcome</h2>
-                <div class="coashes">
+                <h2>Coaches</h2>
+                <div class="coaches">
                     <div>
                         <img src="../image/minela.jpg">
                         <h3>Qualified Coaches</h3>
