--- a/Front-End/HTML&CSS/Exams/Exam - 26 Jun 2022/01. Home Design_Ресурси/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 26 Jun 2022/01. Home Design_Ресурси/index.html
@@ -14,20 +14,26 @@
             <div class="card">
                 <img src="./image/image1.jpg">
                 <h2>Making Hostel Home</h2>
-                <p class="text">Heather Loeber thinks outside of the box to decorate her one-of-a-kind space</p>
-                <p>Continue reading</p>
+                <div class="text">
+                    <p>Heather Loeber thinks outside of the box to decorate her one-of-a-kind space</p>
+                    <p class="first">Continue reading<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#cb1010}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></p>
+                </div>
             </div>
             <div class="card">
                 <img src="./image/image2.jpg">
                 <h2>Warm & Weathered</h2>
-                <p class="text">Lisa Hincher of The Good Home Interiors and Design infuses a multitude of styles into one cohesive space</p>
-                <p>Continue reading</p>
+                <div class="text">
+                    <p>Lisa Hincher of The Good Home Interiors and Design infuses a multitude of styles into one cohesive space</p>
+                    <p>Continue reading<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#cb1010}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></p>
+                </div>
             </div>
             <div class="card">
                 <img src="./image/image3.jpg">
                 <h2>Coastal Consideration</h2>
-                <p class="text">Melissa Freeman, lead designer at Hurlbutt Designs, uses color to create the perfect atmosphere</p>
-                <p>Continue reading</p>
+                <div class="text">
+                    <p>Melissa Freeman, lead designer at Hurlbutt Designs, uses color to create the perfect atmosphere</p>
+                    <p>Continue reading<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#cb1010}</style><path d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM241 377c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l87-87-87-87c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L345 239c9.4 9.4 9.4 24.6 0 33.9L241 377z"/></svg></p>
+                </div>
             </div>
         </div>
     </div>
