--- a/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
@@ -30,13 +30,17 @@
                 </div>
             </section>
             <section class="dog">
-                <h3>Services for every dog</h3>
+                <h2>Services for every dog</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                <div class="card">
-                    <img src="./images/service-1.png">
-                    <h4>Pet Boarding</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                </div>
+                <div class="cards">
+                    <div class="card">
+                        <div>
+                            <img src="./images/service-1.png">
+                        </div>
+                        <h4>Pet Boarding</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+                        
+                    </div>
                 <div class="card">
                     <img src="./images/service-2.png">
                     <h4>Healthy Meals</h4>
@@ -47,6 +51,7 @@
                     <h4>Pet Spa</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                 </div>
+            </div>
             </section>
             <section class="cat">
                 <img src="./images/cat.png">
