--- a/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
@@ -37,18 +37,21 @@
                         <div>
                             <img src="./images/service-1.png">
                         </div>
-                        <h4>Pet Boarding</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                        
+                        <h3>Pet Boarding</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>    
                     </div>
                 <div class="card">
-                    <img src="./images/service-2.png">
-                    <h4>Healthy Meals</h4>
+                    <div>
+                        <img src="./images/service-2.png">
+                    </div>
+                    <h3>Healthy Meals</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                 </div>
                 <div class="card">
-                    <img src="./images/service-3.png">
-                    <h4>Pet Spa</h4>
+                    <div>
+                        <img src="./images/service-3.png">
+                    </div>
+                    <h3>Pet Spa</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
                 </div>
             </div>
@@ -56,14 +59,17 @@
             <section class="cat">
                 <img src="./images/cat.png">
                 <article>
-                    <h2>We care your pet</h2>
-                    <h3>As you care</h3>
-                    <p>Lorem ipsum dolor sit , consectetur adipiscing elit, sed do</p>
-                    <p>iusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p>Quis ipsum suspendisse ultrices gravida. Risus commodo</p>   
-                    <p>viverra maecenas accumsan.</p>
+                    <p>We care your pet</p>
+                    <h2>As you care</h2>
+                    <div>
+                        <p>Lorem ipsum dolor sit , consectetur adipiscing elit, sed do</p>
+                        <p>iusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo</p>   
+                        <p>viverra maecenas accumsan.</p>
+                    </div>
+                    <p class="about"><a href="#">About us</a></p>
                 </article>
-                <p><a href="#">About us</a></p>
+                
             </section>
             <section class="finish">
                 <h3>Why go with Anipat?</h3>
