--- a/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/index.html
@@ -72,39 +72,37 @@
                 
             </section>
             <section class="finish">
-                <h3>Why go with Anipat?</h3>
+                <h2>Why go with Anipat?</h2>
                 <p>Because we know that even the best technology is only as good as the people behind it. 24/7 tech support.</p>
                 <div class="buttons">
-                    <p class="button"><a href="#">Contact Us</a></p>
-                    <p>Or +880 4664 216</p>
+                    <p class="contact"><a href="#">Contact Us</a></p>
+                    <p>Or <span>+880 4664 216</span></p>
                 </div>
             </section>
         </main>
         <footer>
             <div class="links">
                 <ul>
-                    <h4></h4>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <h4>Contact Us</h4>
+                    <li>+555 0000 565</li>
+                    <li>Demomail@gmail.Com</li>
+                    <li>700, Green Lane, New York, USA</li>
                 </ul>
                 <ul>
-                    <h4></h4>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <h4>Our Services</h4>
+                    <li>Pet Insurance</li>
+                    <li>Pet Surgeries</li>
+                    <li>Dog Insurance</li>
                 </ul>
                 <ul>
-                    <h4></h4>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <h4>Quick Link</h4>
+                    <li>About Us</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
                 </ul>
                 <ul>
                     <img src="./images/logo.png">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class="last">239 E 5th St, New York NY 10003, USA</li>
                 </ul>
             </div>
         </footer>
