--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
@@ -3,52 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <header>
-                <p>MENU</p>
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#434447}</style><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
-            </header>
-            <div class="text">
-                <h1>Apollo Jade Template</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+        <header>
+            <p>MENU</p>
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#434447}</style><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+        </header>
+        <div class="card-list">
+            <div class="card">
+                <article class="text1">
+                    <h1><span>Apollo</span> Jade Template</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+                </article>  
+                <div class="hero">
+                    <img src="./images/hero.png">
+                </div>  
             </div>
-            <div class="hero">
-                <img src="./images/hero.png">
-            </div>
-        </div>
-        <div class="card">
-            <div class="camera">
-                <img src="./images/camera.png">
-            </div>
-            <div class="text">
-                <h1>My name is Apollo</h1>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                <p>Ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                <div class="icons">
 
+            <div class="card">
+                <div class="camera">
+                    <img src="./images/camera.png">
+                </div>
+                <div class="text2">
+                    <h1>My name is <span>Apollo</span></h1>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    <p>Ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    <div class="icons">
+
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="./images/thumb-1.jpeg">
-        </div>
-        <div class="card">
+
+            <div class="card">
+                <img src="./images/thumb-1.jpeg">
+            </div>
+
+            <div class="card">
             <div class="feature">
-                <p>Ut enim ad minim</p>
+                <h1><span>Ut enim</span> ad minim</h1>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
             </div>
-        </div>
-        <div class="card">
+            </div>
+
+            <div class="card">
+            <div class="one">
+                <img src="./images/thumb-3.jpeg">
+            </div>
+            <div class="one">
+                <img src="./images/thumb-4.jpeg">
+            </div>
+            <div class="one">
+                <img src="./images/thumb-122.jpeg">
+            </div>
+            </div>
+
+            <div class="card">
+            <div class="text3">
+                <h1><span>Say</span> Hello</h1>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                <div class="mail">
+                    <input type="text" placeholder="Your Email">
+                    <input type="text" placeholder="Subject">
+                </div>  
+                <div class="message">
+                    <input type="text" placeholder="Message">
+                </div>
+                <p class="button"><a>SEND MESSAGE</a></p>
+            </div>
             
+            </div>
         </div>
-        <div class="card">
-            
-        </div>
+        <footer>
+            <p>© Portfolio 2021</p>
+        </footer>
     </div>    
 </body>
 </html>
