--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
@@ -37,27 +37,30 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card img">
                 <img src="./images/thumb-1.jpeg">
             </div>
 
             <div class="card">
-            <div class="feature">
-                <h1><span>Ut enim</span> ad minim</h1>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-            </div>
+                <div class="feature">
+                    <h1><span>Ut enim</span> ad minim</h1>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                </div>
+                <div class="card img">
+                <img src="./images/featured.jpeg">
+                </div>
             </div>
 
             <div class="card">
-            <div class="one">
+                <div class="one">
                 <img src="./images/thumb-3.jpeg">
-            </div>
-            <div class="one">
+                </div>
+                <div class="two">
                 <img src="./images/thumb-4.jpeg">
-            </div>
-            <div class="one">
+                </div>
+                <div class="three">
                 <img src="./images/thumb-122.jpeg">
-            </div>
+                </div>
             </div>
 
             <div class="card">
