--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/index.html
@@ -67,14 +67,14 @@
             <div class="text3">
                 <h1><span>Say</span> Hello</h1>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                <div class="form">
                 <div class="mail">
                     <input type="text" placeholder="Your Email">
                     <input type="text" placeholder="Subject">
-                </div>  
-                <div class="message">
-                    <input type="text" placeholder="Message">
-                </div>
-                <p class="button"><a>SEND MESSAGE</a></p>
+                </div> 
+                    <textarea name="msg" cols="30" rows="5" placeholder="Message"></textarea>
+                    <p class="button"><a>SEND MESSAGE</a></p>
+                </div> 
             </div>
             
             </div>
