--- a/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/index.html
+++ b/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/index.html
@@ -24,20 +24,29 @@
         <main>
             <div class="fees">
                 <h1>Такси</h1>
+                <div>
+                    <img src="./images/calculator-icon.svg">
+                </div>
                 <div class="card-list">
                     <div class="card one">
-                        <h2>Design Basics</h2>
-                        <h4>Подготвителен курс</h4>
-                        <p class="button"><a href="#">КАНДИДАТСТВАЙ</a></p>
+                        <div class="text">
+                            <h2>Design Basics</h2>
+                            <h4>Подготвителен курс</h4>
+                            <p class="button"><a href="#">КАНДИДАТСТВАЙ</a></p>
+                        </div>
                         <section>
-                            <h3>Безплатно</h3>
-                            <p>* 50 лв. такса за приемен изпит</p>
+                            <div>
+                                <h3>Безплатно</h3>
+                                <p>* 50 лв. такса за приемен изпит</p>
+                            </div>
                         </section>
                     </div>
                     <div class="card two">
-                        <h2>Fundamentals Program</h2>
-                        <p>Курсистите ще продължат обучението си в 6 фундаментални курса, покриващи основните сфери на дизайна и визуализацията.</p>
-                        <p>Възможност за заплащане на таксата на 2 равни вноски.</p>
+                        <div class="text">
+                            <h2>Fundamentals Program</h2>
+                            <p>Курсистите ще продължат обучението си в 6 фундаментални курса, покриващи основните сфери на дизайна и визуализацията.</p>
+                            <p>Възможност за заплащане на таксата на 2 равни вноски.</p>
+                        </div>
                         <section>
                             <div>
                                 <p class="price">680 лв.</p>
@@ -50,9 +59,11 @@
                         </section>
                     </div>
                     <div class="card three">
-                        <h2>Professional Program</h2>
-                        <p>Курсистите преминават към обучение в професионалните модули, специализирайки се в избраното професионално направление.</p>
-                        <p>Обявената такса е преференциална за курсистите от Fundamentals Program.</p>
+                        <div class="text">
+                            <h2>Professional Program</h2>
+                            <p>Курсистите преминават към обучение в професионалните модули, специализирайки се в избраното професионално направление.</p>
+                            <p>Обявената такса е преференциална за курсистите от Fundamentals Program.</p>
+                        </div>
                         <section>
                             <div>
                                 <p class="price">330 лв.</p>
@@ -70,6 +81,31 @@
                 <h3>Присъствено или Онлайн</h3>
                 <p>Формите на обучение в SoftUni Digital са две – присъствена и онлайн, така че обучението е подходящо, както за учещи и работещи, така и за курсисти, живеещи във всяка точка на света. Студентите могат да избират дали желаят да се обучават присъствено или онлайн за всеки отделен модул от учебния план.</p>
                 <section>
+                    <div class="line">
+                        <p>Присъствие в учебните зали на всички занятия от програмата</p>
+                        <p class="mark1"><img src="./images/check.svg"></p>
+                        <p class="mark2"><img src="./images/cross.svg"></p>
+                    </div>
+                    <div class="line">
+                        <p>Присъствие в учебните зали на всички занятия от програмата</p>
+                        <p class="mark1"><img src="./images/check.svg"></p>
+                        <p class="mark2"><img src="./images/cross.svg"></p>
+                    </div>
+                    <div class="line">
+                        <p>Присъствие в учебните зали на всички занятия от програмата</p>
+                        <p class="mark1"><img src="./images/check.svg"></p>
+                        <p class="mark2"><img src="./images/cross.svg"></p>
+                    </div>
+                    <div class="line">
+                        <p>Присъствие в учебните зали на всички занятия от програмата</p>
+                        <p class="mark1"><img src="./images/check.svg"></p>
+                        <p class="mark2"><img src="./images/cross.svg"></p>
+                    </div>
+                    <div class="line">
+                        <p>Присъствие в учебните зали на всички занятия от програмата</p>
+                        <p class="mark1"><img src="./images/check.svg"></p>
+                        <p class="mark2"><img src="./images/cross.svg"></p>
+                    </div>
                     <div class="line">
                         <p>Присъствие в учебните зали на всички занятия от програмата</p>
                         <p class="mark1"><img src="./images/check.svg"></p>
