--- a/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/index.html
@@ -14,7 +14,7 @@
                     <img src="./images/logo-header.svg">
                 </div>
                 <ul>
-                    <li>About us</li>
+                    <li>About Us</li>
                     <li>Curriculum</li>
                     <li>Certificates</li>
                     <li>Careers</li>
@@ -25,24 +25,25 @@
             </nav>
         
             <div class="top">
-                <div class="card">
-                <h1>Web Development Certificates</h1>
-                <div class="text">
-                    <p>Acquired certificates and a diploma from the training at SoftUni (Software University) prove the knowledge and skills you have acquired and must be presented to employers.</p>
-                    <p>Certificate - certificate for a course at SoftUni (Software University) is issued after a successfully passed examination with a mark of B or higher.</p>
-                    <p>Diploma - students of SoftUni (Software University) receive a full diploma for a profession after collecting the required number of credits (C# and Java Web Developer - 130 credits, Python and JavaScript Web Developer - 100 credits).</p>
-                </div>
-                </div>
+                <div>
+                    <div class="card">
+                        <h1>Web Development Certificates</h1>
+                        <div class="text">
+                            <p>Acquired certificates and a diploma from the training at SoftUni (Software University) prove the knowledge and skills you have acquired and must be presented to employers.</p>
+                            <p>Certificate - certificate for a course at SoftUni (Software University) is issued after a successfully passed examination with a mark of B or higher.</p>
+                            <p>Diploma - students of SoftUni (Software University) receive a full diploma for a profession after collecting the required number of credits (C# and Java Web Developer - 130 credits, Python and JavaScript Web Developer - 100 credits).</p>
+                        </div>
+                    </div>
 
-                <div class="sertificates">
-                <div class="img1">
-                    <img src="./images/blue-certificate.jpg">
+                    <div class="sertificates">
+                        <div class="img1">
+                            <img src="./images/blue-certificate.jpg">
+                        </div>
+                        <div class="img2">
+                            <img src="./images/dark-certificate.jpg">
+                        </div>
+                    </div>
                 </div>
-                <div class="img1">
-                    <img src="./images/dark-certificate.jpg">
-                </div>
-                </div>
-
                 <p>The diploma awarded by SoftUni is not state recognized but is recognized by the employers.</p>
             </div>
         </header>
