--- a/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/index.html
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/index.html
@@ -59,11 +59,13 @@
             <p>To acquire a complete software engineering diploma or certificate from individual courses, you can apply for admission to SoftUni programming program.</p>
         
             <div class="start">
+                <div>
                 <h1>Explore our Software Engineering Program</h1>
                 <p>Start with a free Programming Basics training, begin your career in the IT sector and graduate as a full stack developer!</p>
-                <div class="buttons">
-                    <p class="apply"><a href="#">APPLY</a></p>
-                    <p class="curriculum"><a href="#">CURRICULUM</a></p>
+                <p class="buttons">
+                    <a class="apply" href="#">APPLY</a>
+                    <a class="curriculum" href="#">CURRICULUM</a>
+                </p>
                 </div>
             </div>
         </main>
@@ -81,7 +83,7 @@
                     <li>About Us</li>
                     <li>Contact Us</li>
                     <li>Webinars</li>
-                    <li class="aa">AA</li>
+                    <li>SoftUni Romania</li>
                 </ul>
                 <ul class="icons">
 
